// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering when 2 friends should match 1`] = `
<Styled(Container)>
  <Styled(Content)>
    <Styled(List)>
      <FriendItem
        friend={
          Object {
            "name": "Someone",
          }
        }
        navigate={[Function]}
      />
      <FriendItem
        friend={
          Object {
            "name": "Someone else",
          }
        }
        navigate={[Function]}
      />
    </Styled(List)>
  </Styled(Content)>
  <SingleFAB
    icon="add"
    onPress={[Function]}
  />
</Styled(Container)>
`;

exports[`Rendering when no friends should match 1`] = `
<Styled(Container)>
  <Styled(Content)>
    <Styled(List) />
  </Styled(Content)>
  <SingleFAB
    icon="add"
    onPress={[Function]}
  />
</Styled(Container)>
`;
